--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 <a href="#">Terms of Service</a>
                 <a href="#">Copyright Policy</a>
             </p>
+            <p>Created by Sarvar </p>
         </footer>
     </div>
     
